# adorym

./: .gitignore  .pylintrc  README.md  README.rst  array_ops.py  create_ptycho_data.py  fullfield.py  global_settings.py  grid_delta.npy  interpolation.py  meta.yaml  misc.py  notes.md  optimizers.py  propagate.py  ptychography.py  pyproject.toml  reconstruct_fullfield.py  reconstruct_ptycho.py  reconstruct_ptycho_init.py  requirements.txt  save_rotation_lookup.py  setup.py  simulation.py  sirt_tomopy.py  util.py  wrappers.py
adhesin_ptycho_2/: defocus_probe.py
adorym/: __init__.py  admm_ptychography.py  array_ops.py  conventional.py  differentiator.py  forward_model.py  global_settings.py  linesearch.py  misc.py  optimizers.py  propagate.py  pseudo.py  ptychography.py  regularizers.py  simulation.py  util.py  visualization.py  wrappers.py
demos/: 2d_multidist_holography_w_affine.py  2d_multidist_holography_w_position_correction.py  2d_ptychography_experimental_data.py  2d_ptychography_w_position_correction.py  2d_ptychography_w_probe_optimization.py  multislice_ptycho_256_theta.py  multislice_tomography_64.py  raw_data_url.txt  reconstruct_2d.py  reconstruct_fullfield.py  reconstruct_ptycho_init.py
simulation/: prop.py  propagate_tf_conv.py  rect.py  sqr_beam.py  test.py  tube_sample.py  tube_sample_64.py  wave_prop_overview.ipynb
tensorflow_recon/: coarse_phase_retrival_and_recon.py  constants.py  conventional_reconstruction_adhesin.py  conventional_reconstruction_cone256.py  create_diffraction_data.py  create_diffraction_data_tf.py  create_fullfield_data.py  (+31 more)
(+131 files in other folders)
