[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "adorym"
authors = [
    {name = "Ming Du"},
]
description = "Automatic Differentiation-based Object Reconstruction with DynaMical Scattering"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "tifffile",
    "torch==1.13.1",
    "torchvision",
    "mpi4py",
    "pandas",
    "h5py",
    "dxchange@git+https://github.com/data-exchange/dxchange.git"
]
version = "0.0.1"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

